--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             android:exported="false" />
         <activity
             android:name=".view.SearchActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".view.HomeActivity"
             android:exported="false" />
@@ -50,7 +51,8 @@
             android:label="@string/title_activity_pharmacies" />
         <activity
             android:name=".view.PostUploadActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".view.MedicineFeedActivity"
             android:exported="false" />
